# etoil-rust-stt-service

./: .dockerignore  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.cpu  README.md  benchmark.py  docker-compose.yml
scripts/: quantize.py
src/: api_server.rs  live.rs  main.rs  server.rs  vad_implementation.rs  websocket.rs
